tests/compile-fail/derive_into_discriminant_without_repr.rs
use enum_discriminant::IntoDiscriminant;

#[derive(IntoDiscriminant)]
enum MyEnum {
    Variant,
}

fn main() {}
