tests/compile-fail/derive_into_discriminant_without_repr.stderr
error: When deriving IntoDiscriminant on an enum, you also need to specify representation type with #[repr()] or #[discriminant()]
 --> tests/compile-fail/derive_into_discriminant_without_repr.rs:4:1
  |
4 | / enum MyEnum {
5 | |     Variant,
6 | | }
  | |_^
